# mlxTM

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: launch-post.md
examples/: noisy_xor.py  qsar_ecfp.py
mlx_tm/: __init__.py  binarize.py  bitpacked.py  bitpacked_train.py  classifier.py  coalesced.py  dense.py  feature_select.py  kernels.py  numpy_ref.py  online.py
tests/: _util.py  test_binarize.py  test_bitpacked.py  test_bitplane.py  test_classifier.py  test_coalesced.py  test_dense.py  test_feature_select.py  test_online.py
